--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
 	"files.associations": {
 		"vector": "cpp",
-		"iosfwd": "cpp"
+		"iosfwd": "cpp",
+		"__split_buffer": "cpp",
+		"string": "cpp"
 	}
 }
